gitops/pacman/base/pacman-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: skuppman
  labels:
    name: pacman
spec:
  type: ClusterIP
  ports:
    - port: 80
      targetPort: 8080
      protocol: TCP
  selector:
    name: pacman
